Fixes dark mode system toast (#1454)
In dark mode system alerts (using Bootstrap toast) were not visible. This commit changes the toast background, border and font color when in dark mode so the alerts are visible.

--- a/src/themes/admin_default/assets/scss/fossbilling.scss
+++ b/src/themes/admin_default/assets/scss/fossbilling.scss
@@ -82,3 +82,14 @@
 #script-code {
     resize: none;
 }
+
+[data-bs-theme=dark] 
+{ 
+  .toast {
+    background: var(--tblr-bg-surface);
+    border: var(--tblr-border-width) var(--tblr-border-style) var(--tblr-secondary);
+    }
+  .toast-header {
+    color: var(--tblr-secondary);
+   }
+}
